# curaitor-agent

./: .env  .env_sample  .gitignore  .pylintrc  LICENSE  README.md  arxiv_out_hits.npz  arxiv_search_chunk.py  arxiv_search_chunk_nb.py  config.yaml  crawled.json  custom_adk_patches.py  main.py  prompts.py  pyproject.toml  pytest.ini  requirements.txt  requirementsv2.txt  requirementsv3.txt  search_results.csv  tt.txt  using_cron.md
.github/workflows/: .pylintrc  ci.yaml  ci.yml  curaitor-scheduled.yml  pylint.yml
agent/: agent.py  custom_adk_patches.py  gmail_create_token.py  gmail_send.py  llm_agent.py  mcp_server.py  mcp_server_v0.py
agent/old_files/: llm_agent.py  planner.py
crawler/: pipeline.py
crawler/spiders/: arxiv_spider.py  arxiv_spider_old.py
curaitor-agent/: .env  .env.example  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
curaitor-agent/agent/: llm_agent.py  planner.py
curaitor-agent/crawler/: arxiv_downloader.py  pipeline.py
curaitor-agent/extractor/: index_builder.py  pdf_processor.py  web_parser.py
curaitor-agent/rag/: content_parsing.py
curaitor-agent/scripts/: ask.py  download_arxiv.py  extract_and_index.py
curaitor-agent/tests/: test_agent_pipeline.py  test_arxiv_downloader.py  test_content_parsing.py
curaitor_agent/: agent.py  arxiv_search_chunk.py  curaitor_mcp_server.py  db_utils.py  gmail_send.py  langraph_pipeline.py  scheduler_service.py  scheduler_service_v0.py  server_test_scheduler.py  test_parsing.ipynb
curaitor_agent/learning_resources/: Agent_MCP_build.ipynb
curaitor_agent_v2/: agent.py  gmail_create_token.py  mcp_server.py  scheduler_service.py
data/: output.json
papers/material_flow_analysis_of_petroleum/: papers_info.json
papers/plastic_chemical_recycling/: papers_info.json
papers/plastic_recycling/: papers_info.json
papers/pyrolysis_of_plastics/: papers_info.json
papers/quantum_computing/: papers_info.json
rag/: old_textMining.py
scripts/: run_daily.py
scripts/launchd/: curaitor.langgraph.sample.plist
tests/: test_funciton.py  test_s3_integration_optional.py  test_workflow_s3_structure.py
tools/: Notifications.Py  arxiv_search_chunk.py  content_parsing.py  mcp_server.py  pdf_parser.py  scheduler_service.py  server_test_scheduler.py
