[project]
name = "curaitor-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv==2.2.0",
    "crawler==0.0.2",
    "extractor==0.5",
    "faiss-cpu==1.12.0",
    "langchain==0.3.27",
    "langchain-google-genai==2.1.10",
    "langchain-ollama==0.3.8",
    "langchain-openai==0.3.33",
    "numpy==2.3.3",
    "pdfminer==20191125",
    "pypdf==6.0.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pyyaml==6.0.2",
    "requests==2.32.5",
    "scrapy==2.13.3",
    "sentence-transformers==5.1.0",
    "tiktoken==0.11.0",
]
